fix isu strategis
